--- a/paper/Tests.tex
+++ b/paper/Tests.tex
@@ -1,5 +1,6 @@
 \section{Tests}
-\begin{table}[]
+\begin{table*}[ht]
+    \centering
     \begin{tabular}{@{}l|ll@{}}
     \toprule
     Test                                  & Code                                                  & Python 2 Output                        \\ \midrule
@@ -22,4 +23,4 @@
     \end{tabular}
     \caption{Tests included in the 2to3 test suite, with the Python 2 code to be translated and intended output of that code.}
     \label{tab:tests}
-\end{table}
+\end{table*}
