--- a/paper/Tests.tex
+++ b/paper/Tests.tex
@@ -1,5 +1,5 @@
 \section{Tests}
-\begin{table*}[ht]
+\begin{table*}
     \centering
     \begin{tabular}{@{}l|ll@{}}
     \toprule
@@ -22,5 +22,5 @@
     test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print >> sys.stderr          | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \bottomrule
     \end{tabular}
     \caption{Tests included in the 2to3 test suite, with the Python 2 code to be translated and intended output of that code.}
-    \label{tab:tests}
+    \label{table:tests}
 \end{table*}
