--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -60,6 +60,7 @@ Taking this all into consideration, overall the hypothesis that a formally verif
             \legend{2to3 Average Run Time (ms), fix\_print Average Run Time (ms)}
         \end{axis}
     \end{tikzpicture}
+    \caption{Mean run times of both 2to3 and fix_print for each test.}
 \end{figure*}
 
 
