--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -17,7 +17,7 @@ Overall, the findings suggest that 2to3 outperforms fix\_print in terms of compu
 
 However, during testing, it was discovered that the version of Python 2 (the \verb|python2-bin| package in the Arch User Repository (AUR), a collection of software packages intended for users of the Arch Linux operating system, the platform used during testing) used in testing was bugged. Trailing commas at the end of print statements should result in a newline character --- a special character that tells the computer to move to a new line, similar in effect to hitting enter on a keyboard --- not being printed. The Python 2 documentation states that is the intended behavior, and therefore both 2to3 and fix\_print attempt to replicate that when translating. However, the version of Python 2 used outputted a newline character even when a trailing comma was present, contrary to its documented behavior, thus rendering otherwise correct translations from both translators incorrect. A version of Python 2 obtained directly from the official Python website was also tested, however that version exhibited the same incorrect behavior as the version from the AUR, thus it was not used for data collection. Therefore, for more accurate results, the accuracy of both translators excluding tests with trailing commas was calculated as well.
 
-Excluding the trailing comma tests, 2to3 was still more accurate than fix\_print. However, there were two tests that were unique within the test suite, as they contained multiple print statements instead of the only a single one, as every other test did. As fix\_print was only specified to translate single print statements, it naturally produced incorrect translations for these two tests. Excluding these two tests, fix\_print attained a higher accuracy than 2to3, due to the fact that 2to3 failed the \verb|test_idempotency_1| test where fix\_print did not, as seen in Tables \ref{table:2to3-accuracy} and \ref{table:fix_print-accuracy}. In Python 2, "print ()" outputs "()", as the empty parenthesis represent an empty tuple, which is a special type of list in Python. To replicate this behavior, the correct Python 3 translation should be "print(())", as Python 3 print statements require an extra pair of parentheses around whatever content is to be outputted. fix\_print is specified to always do as such, however in this case 2to3 translated "print ()" as "print()", which is incorrect as that translation simply prints nothing, as there is no content within the parentheses.
+Excluding the trailing comma tests, 2to3 was still more accurate than fix\_print. However, there were two tests that were unique within the test suite, as they contained multiple print statements instead of the only a single one, as every other test did. As fix\_print was only specified to translate single print statements, it naturally produced incorrect translations for these two tests. Excluding these two tests, fix\_print attained a higher accuracy than 2to3, due to the fact that 2to3 failed the \verb|test_idempotency_1| test where fix\_print did not, as seen in Tables \ref{table:2to3-accuracy} and \ref{table:fix_print-accuracy}. In Python 2, \lstinline[language=Python, style=pythonstyle]|print ()| outputs \verb|()|, as the empty parenthesis represent an empty tuple, which is a special type of list in Python. To replicate this behavior, the correct Python 3 translation should be \lstinline[language=Python, style=pythonstyle]|print(())|, as Python 3 print statements require an extra pair of parentheses around whatever content is to be outputted. fix\_print is specified to always do as such, however in this case 2to3 translated \lstinline[language=Python, style=pythonstyle]|print ()| as \lstinline[language=Python, style=pythonstyle]|print()|, which is incorrect as that translation simply prints nothing, as there is no content within the parentheses.
 
 Taking this all into consideration, overall the hypothesis that a formally verified transpiler would be more computationally accurate than a non-formally verified transpiler is not supported. However, when limited to tests that are within the specification of fix\_print, the hypothesis becomes supported.
 
